--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,7 +13,8 @@
     "next": "15.5.4",
     "openai": "^5.23.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
